--- a/PetCapsuleGUI/PetCapsuleGUI.csproj
+++ b/PetCapsuleGUI/PetCapsuleGUI.csproj
@@ -94,6 +94,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\cat.flv" />
+    <Content Include="Assets\cat.mp4">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\users.json" />
     <None Include="ClassDiagram1.cd" />
     <None Include="project.json" />
